removed app.js classes to fix overflow issue

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,11 +1,21 @@
 @import "../vars.css";
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/*body {
+    overflow-x: hidden;
+}*/
+
 .container {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 49px;
+    margin-top: 149px;
     z-index: 1;
     margin-left: 10%;
     margin-right: 10%;
@@ -19,7 +29,7 @@
 }
 
 .title {
-    font-size: 72px;
+    font-size: clamp(25px, 6vw, 72px);
     font-weight: 900;
     margin-bottom: 33px;
     background: linear-gradient(
@@ -32,13 +42,12 @@
 }
 
 .description {
-    font-size: 30px;
+    font-size: clamp(15px, 4vw, 30px);
     margin-bottom: 52px;
 }
 
 .contactBtn {
     text-decoration: none;
-
     border-radius: 100px;
     font-size: 30px;
     font-weight: 600;
@@ -46,9 +55,9 @@
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
 }
 
-.heroImg {
-    width: 50%;
+.container .homeImg {
     z-index: 1;
+    width: 50%;
     animation-name: floating;
     animation-duration: 3s;
     animation-iteration-count: infinite;
@@ -98,9 +107,36 @@
 @media screen and (max-width: 830px) {
     .container {
         flex-direction: column-reverse;
+        margin-left: 0;
+        margin-right: 0;
     }
 
     .content {
         align-items: center;
+    }
+
+    .container .homeImg {
+        padding-bottom: 80px;
+        padding-top: 30px;
+    }
+
+    @keyframes floating {
+        0% {
+            transform: translate(0, 0px);
+        }
+        50% {
+            transform: translate(0, 0px);
+        }
+        100% {
+            transform: translate(0, 0px);
+        }
+    }
+}
+
+@media screen and (max-width: 530px) {
+
+    .container .homeImg {
+        padding-bottom: 30px;
+        padding-top: 0;
     }
 }
