--- a/src/vars.css
+++ b/src/vars.css
@@ -6,6 +6,4 @@
     --color-dark: #0b2447;
     --color-bg: #191919;
 
-    /* Fonts */
-    --font-roboto: "Roboto";
 }
